fix spacing, add login style and route

--- a/src/Home.css
+++ b/src/Home.css
@@ -6,11 +6,41 @@ body {
   font-family: "Chalkboard SE", sans-serif;
 }
 
+.text-font {
+  font-family: "Chalkboard SE", sans-serif;
+}
+
 .container {
   width: 99%;
   display: flex;
   flex-direction: row;
-  overflow-y: auto;
+}
+
+.login-container {
+  padding-top: 5%;
+  padding-bottom: 10%;
+  padding-left: 25%;
+  padding-right: 25%;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  padding: 5%;
+  align-items: center;
+  /* align-content: center; */
+  /* justify-items: center; */
+  /* justify-content: center; */
+}
+
+.login-form-input {
+  justify-content: center;
+  align-items: start;
+  width: 95%;
+  height: 100%;
+  font-family: "Chalkboard SE", sans-serif;
+  font-size: small;
+  border-radius: 5px;
 }
 
 .header {
@@ -21,14 +51,14 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   border: 2px solid #2c3e50;
 }
 
 .header,
 h1 {
   padding-left: 2%;
-  width: 90%;
+  width: 100%;
 }
 
 .toggle-btn {
@@ -118,6 +148,7 @@ h1 {
   justify-content: flex-start;
   overflow-y: auto; /* Use 'auto' instead of 'scroll' */
   border-right: 2px solid #2c3e50;
+  border-left: 2px solid #2c3e50;
 }
 
 .sidebar.show {
@@ -169,6 +200,7 @@ h1 {
 }
 
 .main-content {
+  min-width: 50%;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -188,12 +220,20 @@ h1 {
   align-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+}
+
+.main-card {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  min-width: 90%;
 }
 
 .main-card-header {
   width: 100%;
-  height: 100%;
+  max-height: 25px;
   background-color: #f6a367;
   border-radius: 25px;
   border: 2px solid #2c3e50;
@@ -210,7 +250,7 @@ h1 {
 }
 
 .main-card-text-container {
-  margin-top: -5%;
+  margin-top: -10px;
   width: 95%;
   height: 95%;
   background-color: #f7d9c4;
@@ -222,7 +262,7 @@ h1 {
 .main-card-text {
   justify-content: center;
   align-items: start;
-  padding-top: 5%;
+  padding-top: 10px;
   width: 95%;
   height: 100%;
   font-size: small;
